Updating 01-first-azure-pipeline.yml for Azure Pipelines

--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -10,10 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, world again!
   displayName: 'Run a one-line script'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
+    echo Add other tasks to build, test, and deploy your project again.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
