--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -9,11 +9,17 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world again!
-  displayName: 'Run a one-line script'
+jobs:
+  - job: Job1
+    steps:
+      - script: echo Hello, world again!
+        displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project again.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+      - script: |
+          echo Add other tasks to build, test, and deploy your project again.
+          echo See https://aka.ms/yaml
+        displayName: 'Run a multi-line script'
+  - job: Job2
+    steps:
+      - script: echo Job2 running
+        displayName: 'One-line Script'
