Update 01-first-azure-pipeline.yml for Azure Pipelines again

--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -20,6 +20,7 @@ jobs:
           echo See https://aka.ms/yaml
         displayName: 'Run a multi-line script'
   - job: Job2
+    dependsOn: Job1
     steps:
       - script: echo Job2 running
         displayName: 'One-line Script'
