--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,36 +16,42 @@ stages:
         steps:
           - bash: echo Build First Job
           - bash: echo $(PipeLineLevelVariable)
-            displayName: "Running Job 1"
-      - job: Job2
-        steps:
-          - bash: echo Job2 Stage1
-  - stage: DevDeploy
-    dependsOn: Build
-    variables:
-      environment: Dev
-    jobs:
-      - job: DevDeploy
-        steps:
-          - bash: echo $(environment)DeployJob
-            displayName: "Running Dev Deploy"
-  - stage: QADeploy
-    dependsOn: Build
-    variables:
-      e2: QA
-    jobs:
-      - job: QADeploy
-        steps:
-          - bash: echo $(e2)DeployJob
-            displayName: "Running QA Deploy"
-  - stage: ProdDeploy
-    dependsOn:
-    - DevDeploy
-    - QADeploy
-    variables:
-      e3: Prod
-    jobs:
-      - job: ProdDeploy
-        steps:
-          - bash: echo $(e3)DeployJob
-            displayName: "Running Prod Deploy"
+          - bash: echo $(Build.Id)
+          - bash: echo $(Build.BuildNumber)
+          - bash: echo $(Build.SourceBranchName)
+          - bash: echo $(Build.SourceDirectory)
+          - bash: echo $(System.DefaultWorkingDirectory)
+          - bash: ls -R $(System.DefaultWorkingDirectory)
+          - bash: echo $ (Build.ArtifactStagingDirectory)
+      # - job: Job2
+      #   steps:
+      #     - bash: echo Job2 Stage1
+  # - stage: DevDeploy
+  #   dependsOn: Build
+  #   variables:
+  #     environment: Dev
+  #   jobs:
+  #     - job: DevDeploy
+  #       steps:
+  #         - bash: echo $(environment)DeployJob
+  #           displayName: "Running Dev Deploy"
+  # - stage: QADeploy
+  #   dependsOn: Build
+  #   variables:
+  #     e2: QA
+  #   jobs:
+  #     - job: QADeploy
+  #       steps:
+  #         - bash: echo $(e2)DeployJob
+  #           displayName: "Running QA Deploy"
+  # - stage: ProdDeploy
+  #   dependsOn:
+  #   - DevDeploy
+  #   - QADeploy
+  #   variables:
+  #     e3: Prod
+  #   jobs:
+  #     - job: ProdDeploy
+  #       steps:
+  #         - bash: echo $(e3)DeployJob
+  #           displayName: "Running Prod Deploy"
