--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,9 +34,14 @@ stages:
                 **/*.yml
                 **/*.tf
               TargetFolder: '$(Build.ArtifactStagingDirectory)'
-              
+
           - bash: ls -R $(Build.ArtifactStagingDirectory)
-            
+          
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
 
 
       # - job: Job2
