--- a/03-working-with-environment-deployment.yml
+++ b/03-working-with-environment-deployment.yml
@@ -1,16 +1,37 @@
 trigger:
 - master
 
-strategy:
-  matrix:
-    linux:
-      operatingSystem: "ubuntu-latest"
-    mac:
-      operatingSystem: "macos-latest"
+# strategy:
+#   matrix:
+#     linux:
+#       operatingSystem: "ubuntu-latest"
+#     mac:
+#       operatingSystem: "macos-latest"
       
 pool:
-  vmImage: $(operatingSystem)
+  vmImage: ubuntu-latest
 
-steps:
-- script: echo running on $(operatingSystem)
-  displayName: 'Run multi-system script'
+stages:
+  - stage: Build
+    jobs:
+      - job: BuildJob
+        steps:
+          - script: echo 'do the build job'
+  - stage: DevDeploy
+    jobs:
+      - deployment: DevDeployJob
+        environment: Dev
+        strategy:
+         runOnce:
+          deploy:
+            steps:
+              - script: echo 'do the dev deploy job'
+  - stage: QADeploy
+    jobs:
+      - deployment: QADeployJob
+        environment: QA
+        strategy:
+         runOnce:
+          deploy:
+            steps:
+              - script: echo 'do the QA deploy job'
