--- a/03-working-with-environment-deployment.yml
+++ b/03-working-with-environment-deployment.yml
@@ -34,4 +34,4 @@ stages:
          runOnce:
           deploy:
             steps:
-              - script: echo 'do the QA deploy job'
+              - script: echo 'do the QA deploy job again'
