--- a/06-azure-kubernetes-code-ci-cd-pipeline.yml
+++ b/06-azure-kubernetes-code-ci-cd-pipeline.yml
@@ -47,6 +47,7 @@ stages:
     - task: DownloadBuildArtifacts@1
       inputs:
         buildType: 'current'
+        downloadType: 'single'
         artifactName: 'manifests'
         itemPattern: '**/*.yaml'
         downloadPath: '$(System.ArtifactsDirectory)'
@@ -55,5 +56,5 @@ stages:
         action: 'deploy'
         kubernetesServiceConnection: 'kubernetes-service-connection'
         namespace: 'default'
-        manifests: '$(System.ArtifactsDirectory)/configuration/kubernetes/deployment.yaml'
+        manifests: '$(System.ArtifactsDirectory)/manifests/configuration/kubernetes/deployment.yaml'
         containers: 'yinko2/currency-exchange-devops:$(tag)'
