--- a/05-azure-kubernetes-cluster-iaac-pipeline.yml
+++ b/05-azure-kubernetes-cluster-iaac-pipeline.yml
@@ -36,3 +36,11 @@ steps:
     runAzLogin: true
     commandOptions: '-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(publickey.secureFilePath)'
     allowTelemetryCollection: true
+
+- task: TerraformCLI@0
+  inputs:
+    command: 'destroy'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
+    environmentServiceName: 'azure-resource-manager-service-connection'
+    runAzLogin: true
+    allowTelemetryCollection: true
