Update 05-azure-kubernetes-cluster-iaac-pipeline.yml for Azure Pipelines

--- a/05-azure-kubernetes-cluster-iaac-pipeline.yml
+++ b/05-azure-kubernetes-cluster-iaac-pipeline.yml
@@ -43,4 +43,5 @@ steps:
     workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
     environmentServiceName: 'azure-resource-manager-service-connection'
     runAzLogin: true
+    commandOptions: '-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(publickey.secureFilePath)'
     allowTelemetryCollection: true
